# agent-coherence

./: .dockerignore  .env.op.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  glama.json  pyproject.toml  requirements-diagnose.txt  server.json
.github/: SECURITY.md
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
benchmarks/: cost_preregistration.md  expected_cost.json
benchmarks/results/: cost_sweep_published.json  cost_tokens_published.json
benchmarks/results/v0.9.0/: attestation.md  c_flip_branch_run.txt  drift_check_vs_expected.txt
benchmarks/scenarios/: crash_recovery_validation.yaml
docs/: agent-coherence-approach.md  ccs-diagnose.md  guide.md  reproduce.md  security.md  why-coherence-matters.md
docs/examples/: manifest.example.yaml
docs/specs/: crash-recovery.md
docs/usage/: byo-substrate.md
examples/: multi_agent_planning.py
examples/atomic_publish/: README.md  __init__.py  main.py
examples/ccsstore_read_side/: README.md  demo.py
examples/ci_merge_gate/: README.md  __init__.py  main.py
examples/coherent_object/: README.md  __init__.py  main.py
examples/coherent_row/: README.md  __init__.py  main.py
examples/coherent_volume/: README.md  __init__.py  broken.py  fixed.py  main.py
examples/concurrent_writers/: README.md  __init__.py  broken.py  fixed.py  main.py
examples/conversations_stale_read/: README.md  __init__.py  broken.py  fixed.py  main.py  probe.py
examples/cross_host/: ADAPTER-CONTRACT.md  README.md  main.py
examples/cross_host/docker/: Dockerfile  client_entry.py  docker-compose.yml  run.sh
examples/divergent_memory/: README.md  demo.py
examples/effect_gate/: README.md  __init__.py  main.py
examples/gate_effect_ordering/: README.md  __init__.py  main.py
examples/langgraph_planner/: main.py
examples/mcp_stale_write_guard/: README.md  __init__.py  broken.py  fixed.py  main.py
examples/rag_stale_memory/: README.md  __init__.py  broken.py  fixed.py  main.py
examples/refactor_demo/: README.md  executor.py  main.py  planner.py  strategies.py
examples/refactor_demo/fixture_repo_ts/: package-lock.json  package.json  tsconfig.json
examples/shared_codebase/: main.py
examples/shared_knowledge_base/: README.md  demo.py
formal/tla/: AtomicPublish.cfg  AtomicPublish.tla  AtomicPublish_CI.cfg  CrashRecovery.cfg  CrashRecovery.tla  CrashRecovery_CI.cfg  Fencing.cfg  Fencing.tla  Fencing_CI.cfg  MESI.tla  MESI_Standalone.cfg  MESI_Standalone.tla  OCC.cfg  OCC.tla  OCC_CI.cfg  README.md  Retention.cfg  Retention.tla  Retention_CI.cfg  Snapshot.cfg  Snapshot.tla  Snapshot_CI.cfg
scripts/: configure-release-protections.sh  reproduce.sh  run-q6-probe.sh
src/ccs/: __init__.py
src/ccs/adapters/: __init__.py  autogen.py  base.py  ccsstore.py  coherent_object.py  coherent_row.py  coherent_volume.py  crewai.py  effect_gate.py  events.py  langgraph.py  openai_agents.py  substrate.py  substrate_manifest.py
src/ccs/agent/: __init__.py  cache.py  runtime.py
src/ccs/artifacts/: __init__.py  diff_engine.py
src/ccs/bus/: __init__.py  event_bus.py
src/ccs/cli/: __init__.py  _coherence_client.py  coherence_coordinator.py  coherence_hook_client.py  coherence_migrate_rules.py  coherence_replay.py  coherence_status.py  coherence_track.py  coherence_untrack.py  compare.py  diagnose.py  simulate.py
src/ccs/coordinator/: __init__.py  backend_contract.py  registry.py  registry_protocol.py  retention.py  service.py  sqlite_registry.py
src/ccs/core/: __init__.py  clock.py  exceptions.py  granularity.py  hashing.py  identity.py  invariants.py  states.py  (+2 more)
tests/: conftest.py  diagnose_helpers.py  replay_fixtures.py  test_adapter_contract_parity.py  test_adapter_crash_recovery.py  test_adapters.py  test_agent_cache.py  test_agent_runtime.py  test_aggregation.py  test_architecture.py  test_atomic_publish_demo.py  test_backend_contract.py  test_bash_path_detector.py  test_benchmark_fixtures.py  test_bounds.py  test_ccsstore_read_side_demo.py  test_ci_merge_gate_demo.py  test_claude_code_bind_validation.py  test_claude_code_cli.py  test_claude_code_contract.py  test_claude_code_coordinator_server.py  test_claude_code_e2e.py  test_claude_code_hook_client.py  test_claude_code_lifecycle.py  test_claude_code_migrate_deny.py  test_claude_code_migrate_rules.py  test_claude_code_policy.py  test_claude_code_policy_strict_mode.py  test_claude_code_resolver.py  test_claude_code_strict_mode_telemetry.py  test_cli.py  test_cli_benchmark.py  test_cli_coherence_replay.py  test_clock.py  test_coherence_client_remote_endpoint.py  test_coherence_client_tls.py  test_coherent_object_demo.py  test_coherent_row_demo.py  test_coherent_volume_demo.py  test_commit_all_registry.py  (+74 more)
tests/adapters/: test_atomic_publish.py  test_ccsstore.py  test_ccsstore_benchmark.py  test_ccsstore_content_audit.py  test_ccsstore_state_log.py  test_coherent_object.py  test_coherent_row.py  test_coherent_volume.py  test_coherent_volume_remote.py  test_coherent_volume_remote_failclosed.py  test_effect_gate_wrapper.py  test_openai_agents.py  test_openai_agents_live.py  test_session_audit.py  test_substrate_cross_agent.py  test_substrate_manifest.py
tests/backend_conformance/: __init__.py  kit.py  test_kit_teeth.py  test_shipped_backends.py
tests/conformance/: __init__.py  substrate_conformance.py  test_tier_honesty.py
tests/integration/: __init__.py  test_replay_e2e.py  test_strict_mode.py  test_strict_mode_launch_gate.py  test_warn_mode_behavior_change.py
tests/mcp/: conftest.py  test_deny_mapping.py  test_lifecycle.py  test_status_three_state.py  test_tools.py  test_uri_validator.py  test_write_cas.py
tests/protocol_corpus/: __init__.py  harness.py  test_strict_mode_corpus.py  test_warn_mode_corpus.py
tools/: benchmark_regression_smoke.py  check_architecture.py  check_readme_numbers.py  check_release_readiness.py  cost_drift_check.py  cost_to_tokens.py  plot_cost_sweep.py  run_artifact_scaling.py  run_canonical_benchmarks.py  run_cost_sweep.py  run_step5_benchmarks.py  run_step_scaling.py  verify_baseline.py
(+107 files in other folders)
